* automated tests
* manuals
* msvscpp build
* check TODOs

Tools:
* bdeinfo
* bdeexport

Format:
* validation
* clear key
* bit locker ToGo ?
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive

Test images:
* for both Windows Vista and Windows 7
* clear key

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* external key

20110811
* worked on libbfio file range IO handle for bdemount
* libbfio code clean up
* added info handle

20110810
* worked on encryption functions

20110807
* worked on AES functions

20110806
* updated libhmac - bug fixes for Solaris
* updated libsystem, libfvalue, 
* created work around for openssl EVP issues
  - currently ignoring the output of Final function
* cleaned up some TODOs

20110805
* worked on reading sector data
* worked on BitLocker ToGo support

20110804
* worked on reading sector data

20110803
* added recovery password option to bdeinfo
* worked on reading sector data
* worked on AES functions
* added metadata entry type and value type debug functions
* worked on FVEK support
* worked on diffuser

20110801
* configure clean up
* updated libhmac
* worked on reading sector data
* worked on AES functions

20110722
* added bytes per sector support in volume header
* added microseconds to filetime output
* created metadata structure to store header and entries

20110721
* worked on encryption
* worked on sector vector and cache

20110720
* worked on encryption

20110719
* worked on encryption

20110718
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated libsystem, libuna, libbfio, libfvalue, libhmac, libfdata,
  libfdatetime, libfguid

20110715
* worked on initial version

20110627
* added libhmac
* updated configure.ac to support libhmac
* replaced libbde_sha.[ch] by libhmac

20110624
* worked on SHA256 functions

20110623
* worked on AES functions
* worked on SHA256 functions

20110622
* worked on AES functions
